link & z-index solve

--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -3,7 +3,7 @@
     height: 100vh;
     flex-direction: column;
     background-color: #47A6C2;
-    z-index: -10;
+    position: relative;
 }
 
 .navbar-top {
@@ -36,6 +36,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    align-items: center;
 }
 
 .navbar-li p {
@@ -48,6 +49,7 @@
     height: 15vh;
     width: 100%;
     background-color: #004567;
+    z-index: 1;
 }
 
 .navbar-signIn {
